--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,35 +1,17 @@
-<p id="notice"><%= notice %></p>
+<% if !user_signed_in? %>
+  <div class="jumbotron">
+    <h1>Your favorite movie review</h1>
+    <p>To add form elements inside the navbar, add the .navbar-form class to a form element and add an input(s). Note that we have added a .form-group class to the div containe</p>
+    <p><%= link_to "Sign up to write a review", new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
+  </div>
 
-<h1>Movies</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Moive length</th>
-      <th>Director</th>
-      <th>Rating</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @movies.each do |movie| %>
-      <tr>
-        <td><%= movie.title %></td>
-        <td><%= movie.description %></td>
-        <td><%= movie.moive_length %></td>
-        <td><%= movie.director %></td>
-        <td><%= movie.rating %></td>
-        <td><%= link_to 'Show', movie %></td>
-        <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
-        <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Movie', new_movie_path %>
+<%end%>
+<div class="row">
+  <% @movies.each do |movie|%>
+      <div class = "col-sm-6 col-md-3" >
+        <div class="thumbnail">
+            <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie%>
+        </div>
+      </div>
+  <%end%>
+</div>
